2008-11-28  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* src/htdocs/documentation/index.xml:
	Add gnonlin to the plugin documentation table.

2008-11-28  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* src/htdocs/apps/index.xml:
	Update URL for the Eina music player and add Minirok, a small KDE/Qt
	music player. Fixes bug #562111.

2008-11-27  Jan Schmidt  <jan.schmidt@sun.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-ffmpeg/0.10.6.xml:
	* src/htdocs/releases/gst-ffmpeg/Makefile.am:
	FFmpeg 0.10.6 release

2008-11-19  Jan Schmidt  <jan.schmidt@sun.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-ugly/0.10.10.xml:
	* src/htdocs/releases/gst-plugins-ugly/Makefile.am:
	Release Ugly 0.10.10

2008-11-08  Jan Schmidt  <jan.schmidt@sun.com>

	* src/htdocs/news/news.xml:
	Commit news release announce for 0.10.11 of Good and 0.10.9 of Bad
	from last month...

2008-11-03  Edward Hervey  <edward.hervey@collabora.co.uk>

	* src/htdocs/entities.gst:
	Fix 'latest version' for a few modules.

2008-11-03  Edward Hervey  <edward.hervey@collabora.co.uk>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gnonlin/0.10.10.xml:
	* src/htdocs/releases/gnonlin/Makefile.am:
	Releasing 0.10.10 of GNonLin

2008-10-24  Jan Schmidt  <jan.schmidt@sun.com>

	* src/htdocs/entities.gst:
	* src/htdocs/releases/gst-plugins-bad/0.10.9.xml:
	* src/htdocs/releases/gst-plugins-bad/Makefile.am:
	* src/htdocs/releases/gst-plugins-good/0.10.11.xml:
	* src/htdocs/releases/gst-plugins-good/Makefile.am:
	Release 0.10.11 of Good and 0.10.9 of Bad

2008-10-03  Jan Schmidt  <jan.schmidt@sun.com>

	* src/htdocs/news/news.xml:
	Fix news item title

2008-10-03  Jan Schmidt  <jan.schmidt@sun.com>

	* src/htdocs/entities.site.gnl:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-base/0.10.21.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am: